// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Social Media Graphics : Race : No Data : Square renders correctly 1`] = `
<div>
  <div
    className="noDataContainer square"
  >
    <img
      alt="Alert icon"
      className="alert"
      src="test-file-stub"
    />
    <p>
      As of 
      October
       
      4
      , 
      <strong>
        Texas
      </strong>
       did not report race and ethnicity data to allow for this comparison.
    </p>
    <p
      className="getBetterData"
    >
      Help us get better data:
      <br />
      <strong>
        www.covidtracking.com/race/get-better-data
      </strong>
    </p>
    <div
      className="logosContainer"
    >
      <img
        alt=""
        className="ctpLogo"
        src="test-file-stub"
      />
      <img
        alt=""
        className="carLogo"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;

exports[`Components : Social Media Graphics : Race : No Data renders correctly 1`] = `
<div>
  <div
    className="noDataContainer"
  >
    <img
      alt="Alert icon"
      className="alert"
      src="test-file-stub"
    />
    <p>
      As of 
      October
       
      4
      , 
      <strong>
        Texas
      </strong>
       did not report race and ethnicity data to allow for this comparison.
    </p>
    <p
      className="getBetterData"
    >
      Help us get better data:
      <br />
      <strong>
        www.covidtracking.com/race/get-better-data
      </strong>
    </p>
    <div
      className="logosContainer"
    >
      <img
        alt=""
        className="ctpLogo"
        src="test-file-stub"
      />
      <img
        alt=""
        className="carLogo"
        src="test-file-stub"
      />
    </div>
  </div>
</div>
`;
